--- a/assets/admin/css/mango-admin.css
+++ b/assets/admin/css/mango-admin.css
@@ -446,7 +446,7 @@ fieldset[disabled] .btn-twitter.active {
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
-  background-color: #333;
+  background-color: #ac581b;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
 }
